--- a/index.html
+++ b/index.html
@@ -1,38 +1,152 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Vishal Kumar | IT Operations & Logistics</title>
   <meta charset="UTF-8">
+  <title>Vishal Kumar | IT Operations & Logistics</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #f4f6f8;
+      margin: 0;
+      padding: 0;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 30px;
+    }
+
+    .card {
+      background: #ffffff;
+      padding: 30px;
+      margin-bottom: 25px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+    }
+
+    h1 {
+      margin-top: 0;
+      color: #222;
+    }
+
+    h2 {
+      border-bottom: 2px solid #e5e7eb;
+      padding-bottom: 8px;
+      color: #333;
+    }
+
+    p {
+      color: #444;
+      line-height: 1.6;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    li {
+      margin-bottom: 8px;
+    }
+
+    .badge {
+      display: inline-block;
+      background: #0a66c2;
+      color: #fff;
+      padding: 6px 12px;
+      border-radius: 20px;
+      font-size: 14px;
+      margin-top: 10px;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 10px 18px;
+      background: #0a66c2;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+
+    .btn:hover {
+      background: #084c91;
+    }
+  </style>
 </head>
-<body style="font-family: Arial; max-width: 800px; margin: auto; padding: 20px;">
 
-  <h1>Vishal Kumar</h1>
-  <h3>IT Operations & Logistics Specialist</h3>
+<body>
 
-  <p>
-    I am an IT Operations & Logistics Specialist with experience in
-    WMS support, fleet operations, ERP systems, and IT infrastructure.
-  </p>
+  <div class="container">
 
-  <h2>What I Do</h2>
-  <ul>
-    <li>IT Operations Support</li>
-    <li>WMS Monitoring & Issue Resolution</li>
-    <li>Fleet Operations & Telematics</li>
-    <li>MIS Reporting & Dashboards</li>
-    <li>Vendor & OEM Coordination</li>
-  </ul>
+    <!-- HEADER -->
+    <div class="card">
+      <h1>Vishal Kumar</h1>
+      <span class="badge">IT Operations & Logistics Specialist</span>
 
-  <h2>Tools</h2>
-  <p>
-    Excel, PowerPoint, WMS, Etrans, Tata Fleet Edge, ServiceNow
-  </p>
+      <p>
+        Experienced IT Operations & Logistics Specialist with hands-on expertise
+        in WMS support, fleet operations, ERP systems, and IT infrastructure.
+        Focused on ensuring system stability, operational continuity, and
+        efficient coordination across warehouse and fleet operations.
+      </p>
 
-  <h2>Contact</h2>
-  <p>
-    Email: kumar.vishal1890@gmail.com<br>
-    LinkedIn: <a href="https://www.linkedin.com/in/vishal-kumar-2940a8163">View Profile</a>
-  </p>
+      <a class="btn" href="https://www.linkedin.com/in/vishal-kumar-2940a8163" target="_blank">
+        View LinkedIn Profile
+      </a>
+    </div>
+
+    <!-- WHAT I DO -->
+    <div class="card">
+      <h2>What I Do</h2>
+      <ul>
+        <li>IT Operations & Infrastructure Support</li>
+        <li>Warehouse Management System (WMS) Monitoring & Issue Resolution</li>
+        <li>Fleet Operations, Telematics & Vehicle Performance Tracking</li>
+        <li>MIS Reporting, Dashboards & Operational Analysis</li>
+        <li>Vendor, OEM & Service Coordination</li>
+      </ul>
+    </div>
+
+    <!-- TOOLS -->
+    <div class="card">
+      <h2>Tools & Technologies</h2>
+      <p>
+        Excel, PowerPoint, WMS, Etrans, Tata Fleet Edge, ServiceNow,
+        Windows OS, IT Infrastructure Support
+      </p>
+    </div>
+
+    <!-- EXPERIENCE SNAPSHOT -->
+    <div class="card">
+      <h2>Experience Snapshot</h2>
+      <p>
+        <strong>Airways Group</strong><br>
+        IT Operations & Logistics Specialist – WMS & Fleet Support
+      </p>
+      <p>
+        Supporting warehouse and fleet operations through WMS monitoring,
+        fleet coordination, fuel efficiency tracking, MIS reporting,
+        and cross-functional IT support.
+      </p>
+    </div>
+
+    <!-- CONTACT -->
+    <div class="card">
+      <h2>Contact</h2>
+      <p>
+        📧 Email: kumar.vishal1890@gmail.com<br>
+        🔗 LinkedIn:
+        <a href="https://www.linkedin.com/in/vishal-kumar-2940a8163" target="_blank">
+          View Profile
+        </a>
+      </p>
+    </div>
+
+  </div>
 
 </body>
 </html>
