--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
       display: inline-block;
       background: #0a66c2;
       color: #fff;
-      padding: 6px 12px;
+      padding: 6px 14px;
       border-radius: 20px;
       font-size: 14px;
-      margin-top: 10px;
+      margin-bottom: 10px;
     }
 
     .btn {
@@ -75,78 +75,117 @@
     .btn:hover {
       background: #084c91;
     }
+
+    .icons span {
+      display: inline-block;
+      margin: 6px 10px 6px 0;
+      background: #eef3f8;
+      padding: 6px 10px;
+      border-radius: 5px;
+      font-size: 14px;
+    }
   </style>
 </head>
 
 <body>
 
-  <div class="container">
+<div class="container">
 
-    <!-- HEADER -->
-    <div class="card">
-      <h1>Vishal Kumar</h1>
-      <span class="badge">IT Operations & Logistics Specialist</span>
+  <!-- HEADER -->
+  <div class="card">
+    <h1>Vishal Kumar</h1>
+    <div class="badge">IT Operations & Logistics Specialist</div>
 
-      <p>
-        Experienced IT Operations & Logistics Specialist with hands-on expertise
-        in WMS support, fleet operations, ERP systems, and IT infrastructure.
-        Focused on ensuring system stability, operational continuity, and
-        efficient coordination across warehouse and fleet operations.
-      </p>
+    <p>
+      IT Operations & Logistics Specialist with 5+ years of experience in
+      WMS support, fleet operations, ERP systems, and IT infrastructure.
+      Focused on ensuring system stability, operational continuity, and
+      efficient coordination across warehouse and fleet operations.
+    </p>
 
-      <a class="btn" href="https://www.linkedin.com/in/vishal-kumar-2940a8163" target="_blank">
-        View LinkedIn Profile
-      </a>
-    </div>
-
-    <!-- WHAT I DO -->
-    <div class="card">
-      <h2>What I Do</h2>
-      <ul>
-        <li>IT Operations & Infrastructure Support</li>
-        <li>Warehouse Management System (WMS) Monitoring & Issue Resolution</li>
-        <li>Fleet Operations, Telematics & Vehicle Performance Tracking</li>
-        <li>MIS Reporting, Dashboards & Operational Analysis</li>
-        <li>Vendor, OEM & Service Coordination</li>
-      </ul>
-    </div>
-
-    <!-- TOOLS -->
-    <div class="card">
-      <h2>Tools & Technologies</h2>
-      <p>
-        Excel, PowerPoint, WMS, Etrans, Tata Fleet Edge, ServiceNow,
-        Windows OS, IT Infrastructure Support
-      </p>
-    </div>
-
-    <!-- EXPERIENCE SNAPSHOT -->
-    <div class="card">
-      <h2>Experience Snapshot</h2>
-      <p>
-        <strong>Airways Group</strong><br>
-        IT Operations & Logistics Specialist – WMS & Fleet Support
-      </p>
-      <p>
-        Supporting warehouse and fleet operations through WMS monitoring,
-        fleet coordination, fuel efficiency tracking, MIS reporting,
-        and cross-functional IT support.
-      </p>
-    </div>
-
-    <!-- CONTACT -->
-    <div class="card">
-      <h2>Contact</h2>
-      <p>
-        📧 Email: kumar.vishal1890@gmail.com<br>
-        🔗 LinkedIn:
-        <a href="https://www.linkedin.com/in/vishal-kumar-2940a8163" target="_blank">
-          View Profile
-        </a>
-      </p>
-    </div>
-
+    <a class="btn" href="resume.pdf" target="_blank">⬇ Download Resume</a>
+    &nbsp;
+    <a class="btn" href="https://www.linkedin.com/in/vishal-kumar-2940a8163" target="_blank">
+      View LinkedIn
+    </a>
   </div>
+
+  <!-- EXPERIENCE HIGHLIGHTS -->
+  <div class="card">
+    <h2>Experience Highlights</h2>
+    <ul>
+      <li>5+ years of experience in IT Operations & Technical Support</li>
+      <li>Hands-on Warehouse Management System (WMS) support</li>
+      <li>Fleet operations coordination & telematics monitoring</li>
+      <li>MIS dashboards & operational reporting for management</li>
+      <li>Vendor, OEM & service coordination</li>
+    </ul>
+  </div>
+
+  <!-- KEY CONTRIBUTIONS -->
+  <div class="card">
+    <h2>Key Contributions</h2>
+    <ul>
+      <li>Supported daily warehouse & fleet operations with minimal downtime</li>
+      <li>Improved issue visibility through structured MIS reporting</li>
+      <li>Coordinated fleet servicing, breakdowns & AMC follow-ups</li>
+      <li>Acted as a bridge between IT, warehouse, and fleet teams</li>
+    </ul>
+  </div>
+
+  <!-- WHAT I DO -->
+  <div class="card">
+    <h2>What I Do</h2>
+    <ul>
+      <li>IT Operations & Infrastructure Support</li>
+      <li>WMS Monitoring & Issue Resolution</li>
+      <li>Fleet Operations, Telematics & Vehicle Performance Tracking</li>
+      <li>MIS Reporting, Dashboards & Operational Analysis</li>
+      <li>Vendor, OEM & Service Coordination</li>
+    </ul>
+  </div>
+
+  <!-- TOOLS -->
+  <div class="card">
+    <h2>Tools & Platforms</h2>
+    <div class="icons">
+      <span>📊 Excel</span>
+      <span>📈 PowerPoint</span>
+      <span>🏭 WMS</span>
+      <span>🚚 Etrans</span>
+      <span>📡 Tata Fleet Edge</span>
+      <span>🎫 ServiceNow</span>
+      <span>💻 Windows OS</span>
+    </div>
+  </div>
+
+  <!-- PROJECTS -->
+  <div class="card">
+    <h2>Projects & Work Samples</h2>
+    <ul>
+      <li>Fleet Issue Tracker – Excel-based downtime & issue tracking (sample)</li>
+      <li>Fuel Efficiency & Performance Reports – MIS dashboards (sample data)</li>
+      <li>WMS Issue Tracking & Coordination – Operational support workflows</li>
+      <li>Process documentation & internal reports (Canva / PPT)</li>
+    </ul>
+    <p style="font-size: 13px; color: #666;">
+      *All samples are created using dummy or masked data for confidentiality.
+    </p>
+  </div>
+
+  <!-- CONTACT -->
+  <div class="card">
+    <h2>Contact</h2>
+    <p>
+      📧 Email: kumar.vishal1890@gmail.com<br>
+      🔗 LinkedIn:
+      <a href="https://www.linkedin.com/in/vishal-kumar-2940a8163" target="_blank">
+        View Profile
+      </a>
+    </p>
+  </div>
+
+</div>
 
 </body>
 </html>
